# wise_enum

./: CMakeLists.txt  README.md  conanfile.py  example.x.cpp  example11.x.cpp  wise_enum.h  wise_enum_detail.h
.ci/: build.sh  exports.sh
test/: WiseEnumTests.cpp  cxx14.cpp
